fix: resolve overflow of friend tile on home page

--- a/src/styles/components/status-indicator.css
+++ b/src/styles/components/status-indicator.css
@@ -231,7 +231,8 @@
 /* =================================
    LAYOUT FIXES
    ================================= */
-.friend-tile-dropdown {
-  z-index: 1010 !important;
-  position: fixed !important;
+
+.friends-carousel-container:has(.friend-tile-dropdown),
+.friends-carousel-list-container-not-full:has(.friend-tile-dropdown) {
+  overflow: visible !important;
 }
